codegen: 可以生成没有编译错误的 UnityEngine.Core 模块绑定

--- a/unity/TODO
+++ b/unity/TODO
@@ -4,8 +4,8 @@
     ✔ auto generate C# types binding code @done(19-02-28 16:06)
     ✔ auto generate d.ts for exported C# types @done(19-02-28 16:07)
     ✔ 处理 delegate @started(19-03-01 08:43) @done(19-03-01 15:12) @lasted(6h29m4s)
-    ☐ !!! 处理重载函数
-    ☐ 处理 interface
+    ✔ !!! 处理重载函数 @done(19-03-05 17:31)
+    ✔ 处理 interface @done(19-03-05 17:31)
     ☐ 处理泛型 @started(19-03-01 08:44)
     ☐ 优化 Vector3 等值类型
     ☐ extends MonoBehaviour
@@ -25,4 +25,5 @@ TODO:
 
 FIXME: 
     ☐ duk_get_delegate 中缓存的 jsValue 存在gc问题 (js 层 DelegateBase 没有 Finalizer) @started(19-03-01 15:14)
+    ✔ 剔除重复的枚举值 @done(19-03-05 17:31)
 
