--- a/unity/TODO
+++ b/unity/TODO
@@ -17,8 +17,9 @@
     ☐ socket
     ☐ websocket
     ☐ protobufjs
-    ☐ !!! 索引访问
-    ☐ !!! 扩展方法
+    ✔ !!! 索引访问 ($GetValue/$SetValue) @done(19-03-07 15:21)
+    ☐ !!! 扩展方法 @started(19-03-07 14:10)
+    ✔ push_delegate 尝试还原 js 对象 @done(19-03-07 14:10)
 
 兼容性: 
     ✔ setInterval/setTimeout @done(19-02-28 16:02)
