--- a/unity/TODO
+++ b/unity/TODO
@@ -21,6 +21,7 @@
     ☐ !!! 扩展方法 @started(19-03-07 14:10)
     ✔ push_delegate 尝试还原 js 对象 @done(19-03-07 14:10)
     ✔ 自动生成 Delegate 对应的 stub type var (== Dispatcher) @done(19-03-07 17:30)
+    ☐ 识别属性 JSRawFunction, 直接传递 ctx
 
 兼容性: 
     ✔ setInterval/setTimeout @done(19-02-28 16:02)
