生成 d.ts 中 implements 部分

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
     ✔ 处理 delegate @started(19-03-01 08:43) @done(19-03-01 15:12) @lasted(6h29m4s)
     ✔ !!! 处理重载函数 @done(19-03-05 17:31)
     ✔ 处理 interface @done(19-03-05 17:31)
-    ☐ 优化 Vector3 等值类型 (Vector3已部分完成, Slerp等考虑转接到binding调用, 不在优化中自己实现) @started(19-03-11 14:09)
+    ✔ 优化 Vector3 等值类型 (Vector3已部分完成, Slerp等考虑转接到binding调用, 不在优化中自己实现) @started(19-03-11 14:09) @done(19-03-29 09:32) @lasted(2w3d19h23m39s)
     ☐ extends MonoBehaviour (需要禁止 MonoBehaviour binding 中对构造方法调用的默认行为) @started(19-03-11 14:09)
     ✔ 将 ref/out 做成 ts 泛型调用约定 (DuktapeJS.Ref<T> & Out<T>) @started(19-03-11 14:09) @done(19-03-12 04:54) @lasted(14h45m29s)
     
@@ -14,10 +14,10 @@
     ✔ 处理泛型 @started(19-03-01 08:44) @done(19-03-06 06:09) @lasted(4d21h25m8s)
     ✔ AddComponent/GetComponent @done(19-03-06 06:09)
     ☐ 支持 debugger @started(19-03-01 08:44)
-    ☐ 具体泛型类支持 (待细化)
+    ✔ 具体泛型类支持 (待细化) @done(19-03-29 09:32)
     ☐ socket
     ☐ websocket
-    ☐ protobufjs
+    ✔ protobufjs @done(19-03-29 09:32)
     ✔ !!! 索引访问 ($GetValue/$SetValue) @done(19-03-07 15:21)
     ✔ !!! 扩展方法 @started(19-03-07 14:10) @done(19-03-25 14:02) @lasted(2w3d23h52m10s)
     ☐ Physcis.Raycast 等接口的调用优化
@@ -36,6 +36,7 @@ FIXME:
     ✔ duk_get_delegate 中缓存的 jsValue 存在gc问题 (js 层 DelegateBase 没有 Finalizer) @started(19-03-01 15:14) @done(19-03-07 17:31) @lasted(6d2h17m22s)
     ✔ 剔除重复的枚举值 @done(19-03-05 17:31)
     ✔ 嵌套类型 ts 定义修正 @done(19-03-06 06:12)
-    ☐ !!! 当使用扩展方法时 添加额外的 using 来启用扩展（或者直接按静态方式调用扩展方法） @started(19-03-28 15:52)
-    ☐ !!  处理类实现接口对应的 d.ts 声明
+    ✔ !!! 当使用扩展方法时 添加额外的 using 来启用扩展（或者直接按静态方式调用扩展方法） @started(19-03-28 15:52) @done(19-03-29 09:11) @lasted(17h19m28s)
+    ✔ !!  处理类实现接口对应的 d.ts 声明 @done(19-03-29 09:30)
+    ☐ (C#)抽象类没有实现基类或接口方法时在 d.ts 仍需补充声明
 
