--- a/TODO
+++ b/TODO
@@ -1,4 +1,10 @@
 
+v0.2:
+    ✔ websocket 支持 (libwebsockets) @done(19-04-10 11:08)
+
+v0.1:
+    ✔ Unity 常用值类型优化 @done(19-04-10 10:19)
+
 核心功能: 
     ✔ nodejs-like module @done(19-02-28 16:06)
     ✔ auto generate C# types binding code @done(19-02-28 16:06)
