--- a/TODO
+++ b/TODO
@@ -2,9 +2,9 @@
 core: 
     ☐ extends MonoBehaviour (需要禁止 MonoBehaviour binding 中对构造方法调用的默认行为) @started(19-03-11 14:09)
     ☐ websocket.open 传入服务器选择的 protocol
-    ☐ 利用 duktape thread 模拟协程 (https://github.com/svaarala/duktape/issues/1101)
     ☐ 为导出类型链末端 constructor 增加额外一层继承, 以便在 d.ts 中对 Type 做出具体类型约束
     ☐ 识别属性 JSRawFunction, 直接传递 ctx
+    ✔ 利用 duktape thread 模拟协程 (https://github.com/svaarala/duktape/issues/1101) @done(20-01-17 11:41)
     ✔ websocket 支持 (libwebsockets) @done(19-04-10 11:08)
     ✔ Unity 常用值类型优化 @done(19-04-10 10:19)
     ✔ nodejs-like module @done(19-02-28 16:06)
